--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -15,6 +15,7 @@
     "@jenkins-cd/js-test": "1.2.3",
     "babel-eslint": "^6.0.2",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "6.5.0",
