--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ npm-debug.log
 **/.settings/
 **/.project
 **/.classpath
-blueocean-web/src/main/webapp/
+blueocean-web/src/main/webapp/assets
+blueocean-web/src/main/webapp/.readme
 .build_container
