--- a/blueocean-config/package.json
+++ b/blueocean-config/package.json
@@ -8,11 +8,11 @@
   "author": "Vivek Pandey <vivek.pandey@gmail.com> (https://github.com/vivek)",
   "license": "MIT",
   "dependencies": {
-    "@jenkins-cd/js-modules": "0.0.6",
+    "@jenkins-cd/js-modules": "0.0.7-beta1",
     "rollbar-browser": "1.9.1"
   },
   "devDependencies": {
-    "@jenkins-cd/js-builder": "0.0.38",
+    "@jenkins-cd/js-builder": "0.0.38-beta1",
     "babel-eslint": "^6.1.2",
     "gulp": "3.9.1",
     "eslint-plugin-react": "^5.0.1"
