--- a/js-extensions/package.json
+++ b/js-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jenkins-cd/js-extensions",
-  "version": "0.0.23-unpublished",
+  "version": "0.0.23-beta1",
   "description": "Jenkins Extension Store",
   "main": "index.js",
   "files": [
@@ -18,14 +18,14 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^0.14.7 || ^15.0.0",
-    "@jenkins-cd/js-modules": "^0.0.6",
+    "@jenkins-cd/js-modules": "^0.0.7-beta1",
     "react-dom": "^0.14.7 || ^15.0.0"
   },
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.38",
-    "@jenkins-cd/js-modules": "0.0.6",
-    "@jenkins-cd/js-test": "1.2.3",
+    "@jenkins-cd/js-builder": "0.0.38-beta1",
+    "@jenkins-cd/js-modules": "0.0.7-beta1",
+    "@jenkins-cd/js-test": "1.2.2",
     "babel-cli": "6.10.1",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
