--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     <module>blueocean-rest</module>
     <module>blueocean-rest-impl</module>
     <module>blueocean-pipeline-api-impl</module>
+    <module>blueocean-pipeline-editor</module>
     <module>blueocean-events</module>
     <module>blueocean-dashboard</module>
     <module>blueocean-personalization</module>
