--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -28,7 +28,7 @@
     "zombie": "^4.2.1"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.4",
+    "@jenkins-cd/blueocean-core-js": "0.0.5-tf1",
     "@jenkins-cd/design-language": "0.0.70",
     "@jenkins-cd/js-extensions": "0.0.23-beta1",
     "@jenkins-cd/js-modules": "0.0.7-beta1",
